use PropertyDefinition instead of HasContainer.key and support null ids.